# microlens-aeson

./: .gitignore  .travis.yml  AUTHORS.markdown  AUTHORS.md  CHANGELOG.markdown  CHANGELOG.md  README.markdown  README.md  aeson-traversal.cabal  lens-aeson.cabal  microlens-aeson.cabal  package.yaml  stack-784.yaml  stack.yaml
.github/workflows/: ci.yaml  haskell-ci.yml
bench/: Bench.hs
src/Control/Lens/: Aeson.hs
src/Data/Aeson/: Lens.hs  Prism.hs  Traversal.hs
src/Data/Aeson/Lens/: Internal.hs
src/Data/Aeson/Traversal/: Derived.hs  Primitive.hs  Types.hs  Value.hs
src/Lens/Micro/: Aeson.hs
src/Lens/Micro/Aeson/: Internal.hs
test/: Test.hs
