name:                aeson-traversal
version:             0.1.0.0
synopsis:            Traversals for Data.Aeson
-- description:         
license:             MIT
license-file:        LICENSE
author:              Paul Wilson
maintainer:          wilson.pw@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Data.Aeson.Traversal,
                       Data.Aeson.Traversal.Value
                       Data.Aeson.Traversal.Primitive

  build-depends:       base >= 4.3,
                       lens >= 3.8,
                       text,
                       vector,
                       unordered-containers,
                       attoparsec >= 0.10,
                       bytestring,
                       aeson >= 0.6
